--- a/mighty-ui/src/assets/css/default.css
+++ b/mighty-ui/src/assets/css/default.css
@@ -1,17 +1,10 @@
-.common_container_style {
-    background-color: lightgray;
-}
-
-.common_button_style {
-    margin-right: 10px;
-    width: 120px;
-}
-
 .common_clear_all {
     clear: both;
 }
 
+
 /* Default layout */
+
 .common_content_box {
     width: 100%;
     height: 100%;
@@ -28,10 +21,11 @@
     padding-top: 2px;
 }
 
-.common_title_text {
-}
+.common_title_text {}
+
 
 /* Grid layout */
+
 .common_grid {
     padding-top: 0px;
 }
@@ -45,7 +39,9 @@
     margin-top: 0px;
 }
 
+
 /* Button style (Default) */
+
 .common_default_button {
     width: 150px;
     box-shadow: inset 0px 1px 0px 0px #bee2f9;
@@ -61,16 +57,20 @@
     text-decoration: none;
     text-shadow: 0px 1px 0px #7cacde;
 }
+
 .common_default_button:hover {
     background: linear-gradient(to bottom, #468ccf 5%, #63b8ee 100%);
     background-color: #468ccf;
 }
+
 .common_default_button:active {
     position: relative;
     top: 1px;
 }
 
+
 /* Button style (Highlight) */
+
 .common_button_1 {
     width: 150px;
     box-shadow: inset 0px 1px 0px 0px #fff6af;
