Email 변수관련 Bug 수정

--- a/mighty-ui/src/assets/css/default.css
+++ b/mighty-ui/src/assets/css/default.css
@@ -111,6 +111,10 @@
     font-size: small;
 }
 
+.v-data-table {
+    padding: 0px 20px;
+}
+
 .v-data-table-header th {
     white-space: nowrap;
   }
