--- a/mighty-ui/src/assets/css/default.css
+++ b/mighty-ui/src/assets/css/default.css
@@ -72,6 +72,30 @@
     top: 1px;
 }
 
+.common_search_button {
+    width: 150px;
+	box-shadow:inset 0px 1px 0px 0px #a4e271;
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	background-color:#89c403;
+	border-radius:6px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528009;
+}
+.common_search_button:hover {
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	background-color:#77a809;
+}
+.common_search_button:active {
+	position:relative;
+	top:1px;
+}
 
 /* Button style (Highlight) */
 
